--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
 	<name>Movie World</name>
 	<description>Movie DB webapp</description>
 	<dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>    
 		<!-- Dates and time -->
 		<dependency>
 			<groupId>joda-time</groupId>
