--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,22 @@
 	<name>Movie World</name>
 	<description>Movie DB webapp</description>
 	<dependencies>
+		<!-- View -->
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
-		</dependency>  
+		    <groupId>org.webjars</groupId>
+		    <artifactId>webjars-locator</artifactId>
+		    <version>0.1</version>
+		</dependency>         
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>jquery</artifactId>
+		    <version>2.0.3</version> 
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap</artifactId>
+		    <version>3.2.0</version>
+		</dependency>
 		<!-- DB -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -25,6 +35,12 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>  
 		<!-- Dates and time -->
 		<dependency>
 			<groupId>joda-time</groupId>
