--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>  
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 		<!-- Dates and time -->
 		<dependency>
 			<groupId>joda-time</groupId>
@@ -73,6 +78,26 @@
 			<version>6.1.22</version>
 			<scope>test</scope>
 		</dependency>
+		  <dependency>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-server</artifactId>
+        <version>7.2.2.v20101205</version>
+    </dependency>
+    <dependency>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-webapp</artifactId>
+        <version>7.2.2.v20101205</version>
+    </dependency>
+    <dependency>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-jsp-2.1</artifactId>
+        <version>7.2.2.v20101205</version>
+    </dependency>
+    <dependency>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jsp-2.1-glassfish</artifactId>
+        <version>2.1.v20100127</version>
+    </dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
