--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,8 +4,16 @@
 		<servlet-name>Index</servlet-name>
 		<servlet-class>ar.edu.itba.paw.g4.servlets.IndexServlet</servlet-class>
 	</servlet>	
+	<servlet>
+		<servlet-name>Login</servlet-name>
+		<servlet-class>ar.edu.itba.paw.g4.servlets.LoginServlet</servlet-class>
+	</servlet>	
 	<servlet-mapping>
 		<servlet-name>Index</servlet-name>
 		<url-pattern>/index</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Login</servlet-name>
+		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
 </web-app>
