--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,8 +6,8 @@
 		</servlet-class>
 	</servlet>
 	<servlet>
-		<servlet-name>Movies</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.controller.MoviesController
+		<servlet-name>MovieList</servlet-name>
+		<servlet-class>ar.edu.itba.paw.g4.controller.MovieListController
 		</servlet-class>
 	</servlet>
 	<servlet-mapping>
@@ -15,7 +15,7 @@
 		<url-pattern>/index</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
-		<servlet-name>Movies</servlet-name>
-		<url-pattern>/movies</url-pattern>
+		<servlet-name>MovieList</servlet-name>
+		<url-pattern>/movieList</url-pattern>
 	</servlet-mapping>
 </web-app>
