--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,11 @@
 		<servlet-class>ar.edu.itba.paw.g4.controller.LoginController
 		</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>Registration</servlet-name>
+		<servlet-class>ar.edu.itba.paw.g4.controller.RegistrationController
+		</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Index</servlet-name>
 		<url-pattern>/index</url-pattern>
@@ -26,5 +31,9 @@
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Registration</servlet-name>
+		<url-pattern>/registration</url-pattern>
 	</servlet-mapping>
 </web-app>
