error.jsp, error controller, try catch of ServiceException in LoginController. Change some stuff in user filter and user service

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,11 @@
 		<servlet-class>ar.edu.itba.paw.g4.controller.RegistrationController
 		</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>Error</servlet-name>
+		<servlet-class>ar.edu.itba.paw.g4.controller.ErrorController
+		</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Index</servlet-name>
 		<url-pattern>/index</url-pattern>
@@ -44,5 +49,9 @@
 	<servlet-mapping>
 		<servlet-name>Registration</servlet-name>
 		<url-pattern>/registration</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Error</servlet-name>
+		<url-pattern>/error</url-pattern>
 	</servlet-mapping>
 </web-app>
