--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,14 @@
 		<servlet-class>ar.edu.itba.paw.g4.controller.RegistrationController
 		</servlet-class>
 	</servlet>
+	<filter>
+		<filter-name>UserFilter</filter-name>
+		<filter-class>ar.edu.itba.paw.g4.filter.UserFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>UserFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<servlet-mapping>
 		<servlet-name>Index</servlet-name>
 		<url-pattern>/index</url-pattern>
