--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,9 +31,25 @@
 		</servlet-class>
 	</servlet>
 	<filter>
+		<filter-name>FatalError</filter-name>
+		<filter-class>ar.edu.itba.paw.g4.filter.FatalErrorFilter</filter-class>
+	</filter>
+	<filter>
+		<filter-name>HomeFilter</filter-name>
+		<filter-class>ar.edu.itba.paw.g4.filter.HomeFilter</filter-class>
+	</filter>
+	<filter>
 		<filter-name>UserFilter</filter-name>
 		<filter-class>ar.edu.itba.paw.g4.filter.UserFilter</filter-class>
 	</filter>
+	<filter-mapping>
+		<filter-name>FatalError</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>HomeFilter</filter-name>
+		<url-pattern>/</url-pattern>
+	</filter-mapping>
 	<filter-mapping>
 		<filter-name>UserFilter</filter-name>
 		<url-pattern>/*</url-pattern>
