--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
+	<!-- Servlets -->
 	<servlet>
 		<servlet-name>Index</servlet-name>
 		<servlet-class>ar.edu.itba.paw.g4.controller.IndexController
@@ -26,6 +27,11 @@
 		</servlet-class>
 	</servlet>
 	<servlet>
+		<servlet-name>Logout</servlet-name>
+		<servlet-class>ar.edu.itba.paw.g4.controller.LogoutController
+		</servlet-class>
+	</servlet>
+	<servlet>
 		<servlet-name>Registration</servlet-name>
 		<servlet-class>ar.edu.itba.paw.g4.controller.RegistrationController
 		</servlet-class>
@@ -40,6 +46,8 @@
 		<servlet-class>ar.edu.itba.paw.g4.controller.UserCommentsController
 		</servlet-class>
 	</servlet>
+
+	<!-- Filters -->
 	<filter>
 		<filter-name>FatalError</filter-name>
 		<filter-class>ar.edu.itba.paw.g4.filter.FatalErrorFilter
@@ -53,6 +61,8 @@
 		<filter-name>UserFilter</filter-name>
 		<filter-class>ar.edu.itba.paw.g4.filter.UserFilter</filter-class>
 	</filter>
+
+	<!-- Mappings -->
 	<filter-mapping>
 		<filter-name>FatalError</filter-name>
 		<url-pattern>/*</url-pattern>
@@ -86,6 +96,10 @@
 		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
+		<servlet-name>Logout</servlet-name>
+		<url-pattern>/logout</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
 		<servlet-name>Registration</servlet-name>
 		<url-pattern>/registration</url-pattern>
 	</servlet-mapping>
@@ -95,6 +109,6 @@
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>UserComments</servlet-name>
-		<url-pattern>/myComments</url-pattern>
+		<url-pattern>/me/comments/all</url-pattern>
 	</servlet-mapping>
 </web-app>
