Falta crear bien el comentario en el CommentServlet

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,11 @@
 		</servlet-class>
 	</servlet>
 	<servlet>
+		<servlet-name>Comment</servlet-name>
+		<servlet-class>ar.edu.itba.paw.g4.servlet.CommentServlet
+		</servlet-class>
+	</servlet>
+	<servlet>
 		<servlet-name>MovieDetail</servlet-name>
 		<servlet-class>ar.edu.itba.paw.g4.servlet.MovieServlet
 		</servlet-class>
@@ -82,6 +87,10 @@
 	<servlet-mapping>
 		<servlet-name>MoviesHome</servlet-name>
 		<url-pattern>/home</url-pattern>
+	</servlet-mapping>
+		<servlet-mapping>
+		<servlet-name>Comment</servlet-name>
+		<url-pattern>/comment</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>MovieList</servlet-name>
