--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -63,10 +63,10 @@
 	</filter>
 
 	<!-- Mappings -->
-	<filter-mapping>
-		<filter-name>FatalError</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+<!-- 	<filter-mapping> -->
+<!-- 		<filter-name>FatalError</filter-name> -->
+<!-- 		<url-pattern>/*</url-pattern> -->
+<!-- 	</filter-mapping> -->
 	<filter-mapping>
 		<filter-name>HomeFilter</filter-name>
 		<url-pattern>/</url-pattern>
