--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -66,6 +66,10 @@
 		<filter-name>UserFilter</filter-name>
 		<filter-class>ar.edu.itba.paw.g4.filter.UserFilter</filter-class>
 	</filter>
+	<filter>
+		<filter-name>LastMovieFilter</filter-name>
+		<filter-class>ar.edu.itba.paw.g4.filter.LastMovieFilter</filter-class>
+	</filter>
 
 	<!-- Mappings -->
 <!-- 	<filter-mapping> -->
@@ -78,6 +82,10 @@
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>UserFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>LastMovieFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<servlet-mapping>
