--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap-datepicker</artifactId>
 			<version>1.2.0</version>
-		</dependency>		
+		</dependency>
 		<!-- Servlets -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -51,6 +51,11 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
 		</dependency>
 		<!-- Automatic Builder generation -->
 		<dependency>
