--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>MovieWorld</finalName>
 		<pluginManagement>
 			<plugins>
 				<plugin>
