--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,72 +3,72 @@
 	<!-- Servlets -->
 	<servlet>
 		<servlet-name>Index</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.servlet.IndexServlet
+		<servlet-class>ar.edu.itba.paw.g4.web.IndexServlet
 		</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>MoviesHome</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.servlet.MovieHomeServlet
+		<servlet-class>ar.edu.itba.paw.g4.web.MovieHomeServlet
 		</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>MovieList</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.servlet.MovieListServlet
+		<servlet-class>ar.edu.itba.paw.g4.web.MovieListServlet
 		</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>Comment</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.servlet.CommentServlet
+		<servlet-class>ar.edu.itba.paw.g4.web.CommentServlet
 		</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>MovieDetail</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.servlet.MovieServlet
+		<servlet-class>ar.edu.itba.paw.g4.web.MovieServlet
 		</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>Login</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.servlet.LoginServlet
+		<servlet-class>ar.edu.itba.paw.g4.web.LoginServlet
 		</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>Logout</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.servlet.LogoutServlet
+		<servlet-class>ar.edu.itba.paw.g4.web.LogoutServlet
 		</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>Registration</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.servlet.RegistrationServlet
+		<servlet-class>ar.edu.itba.paw.g4.web.RegistrationServlet
 		</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>Error</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.servlet.ErrorServlet
+		<servlet-class>ar.edu.itba.paw.g4.web.ErrorServlet
 		</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>UserComments</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.servlet.UserCommentsServlet
+		<servlet-class>ar.edu.itba.paw.g4.web.UserCommentsServlet
 		</servlet-class>
 	</servlet>
 
 	<!-- Filters -->
 	<filter>
 		<filter-name>FatalError</filter-name>
-		<filter-class>ar.edu.itba.paw.g4.filter.FatalErrorFilter
+		<filter-class>ar.edu.itba.paw.g4.web.filter.FatalErrorFilter
 		</filter-class>
 	</filter>
 	<filter>
 		<filter-name>HomeFilter</filter-name>
-		<filter-class>ar.edu.itba.paw.g4.filter.HomeFilter</filter-class>
+		<filter-class>ar.edu.itba.paw.g4.web.filter.HomeFilter</filter-class>
 	</filter>
 	<filter>
 		<filter-name>UserFilter</filter-name>
-		<filter-class>ar.edu.itba.paw.g4.filter.UserFilter</filter-class>
+		<filter-class>ar.edu.itba.paw.g4.web.filter.UserFilter</filter-class>
 	</filter>
 	<filter>
 		<filter-name>LastMovieFilter</filter-name>
-		<filter-class>ar.edu.itba.paw.g4.filter.LastMovieFilter</filter-class>
+		<filter-class>ar.edu.itba.paw.g4.web.filter.LastMovieFilter</filter-class>
 	</filter>
 
 	<!-- Mappings -->
