--- a/pom.xml
+++ b/pom.xml
@@ -58,12 +58,12 @@
 			<version>3.3.2</version>
 		</dependency>
 		<!-- Automatic Builder generation -->
-		<dependency>
-			<groupId>net.karneim</groupId>
-			<artifactId>pojobuilder</artifactId>
-			<version>3.1.0</version>
-			<scope>provided</scope>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>net.karneim</groupId> -->
+		<!-- <artifactId>pojobuilder</artifactId> -->
+		<!-- <version>3.1.0</version> -->
+		<!-- <scope>provided</scope> -->
+		<!-- </dependency> -->
 		<!-- Testing -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -112,35 +112,9 @@
 					<configuration>
 						<source>1.7</source>
 						<target>1.7</target>
-						<!-- <generatedSourcesDirectory>${basedir}/src/generated/java</generatedSourcesDirectory> -->
 					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.7</version>
-				<executions>
-					<execution>
-						<id>copy-builder-src-files</id>
-						<phase>compile</phase>
-						<configuration>
-							<target name="copy builder src files to web project">
-								<copy todir="${project.build.directory}">
-									<fileset dir="${project.build.directory}">
-										<include name="**/*.java" />
-									</fileset>
-								</copy>
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
 	</build>
 </project>
