--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>4.1.1.RELEASE</version>
+			<scope>compile</scope>
 		</dependency>
 		<!-- View -->
 		<dependency>
