--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,127 +2,17 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
 	<!-- Servlets -->
 	<servlet>
-		<servlet-name>MoviesHome</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.web.MovieHomeServlet
+		<servlet-name>
+			SpringDispatcher
+		</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet
 		</servlet-class>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
-	<servlet>
-		<servlet-name>MovieList</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.web.MovieListServlet
-		</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>Comment</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.web.CommentServlet
-		</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>MovieDetail</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.web.MovieServlet
-		</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>Login</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.web.LoginServlet
-		</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>Logout</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.web.LogoutServlet
-		</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>Registration</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.web.RegistrationServlet
-		</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>Error</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.web.ErrorServlet
-		</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>UserComments</servlet-name>
-		<servlet-class>ar.edu.itba.paw.g4.web.UserCommentsServlet
-		</servlet-class>
-	</servlet>
-
-	<!-- Filters -->
-	<filter>
-		<filter-name>FatalError</filter-name>
-		<filter-class>ar.edu.itba.paw.g4.web.filter.FatalErrorFilter
-		</filter-class>
-	</filter>
-	<filter>
-		<filter-name>Encoding</filter-name>
-		<filter-class>ar.edu.itba.paw.g4.web.filter.EncodingFilter
-		</filter-class>
-	</filter>
-	<filter>
-		<filter-name>HomeFilter</filter-name>
-		<filter-class>ar.edu.itba.paw.g4.web.filter.HomeFilter</filter-class>
-	</filter>
-	<filter>
-		<filter-name>UserFilter</filter-name>
-		<filter-class>ar.edu.itba.paw.g4.web.filter.UserFilter</filter-class>
-	</filter>
-	<filter>
-		<filter-name>LastMovieFilter</filter-name>
-		<filter-class>ar.edu.itba.paw.g4.web.filter.LastMovieFilter
-		</filter-class>
-	</filter>
 
 	<!-- Mappings -->
-	<!-- <filter-mapping> -->
-	<!-- <filter-name>FatalError</filter-name> -->
-	<!-- <url-pattern>/*</url-pattern> -->
-	<!-- </filter-mapping> -->
-	<filter-mapping>
-		<filter-name>HomeFilter</filter-name>
-		<url-pattern>/</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>Encoding</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>UserFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>LastMovieFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
 	<servlet-mapping>
-		<servlet-name>MoviesHome</servlet-name>
-		<url-pattern>/home</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>Comment</servlet-name>
-		<url-pattern>/comment</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>MovieList</servlet-name>
-		<url-pattern>/movies/list</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>MovieDetail</servlet-name>
-		<url-pattern>/movies/detail</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>Login</servlet-name>
-		<url-pattern>/login</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>Logout</servlet-name>
-		<url-pattern>/logout</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>Registration</servlet-name>
-		<url-pattern>/registration</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>UserComments</servlet-name>
-		<url-pattern>/me/comments/all</url-pattern>
+		<servlet-name>SpringDispatcher</servlet-name>
+		<url-pattern>/app/*</url-pattern>
 	</servlet-mapping>
 </web-app>
