--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,66 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
 	<!-- Servlets -->
 	<servlet>
-		<servlet-name>
-			SpringDispatcher
-		</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet
-		</servlet-class>
+		<servlet-name>spring</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
-	<!-- Mappings -->
 	<servlet-mapping>
-		<servlet-name>SpringDispatcher</servlet-name>
-		<url-pattern>/app/*</url-pattern>
+		<servlet-name>spring</servlet-name>
+		<url-pattern>/bin/*</url-pattern>
+		<!-- <url-pattern>/*</url-pattern> -->
 	</servlet-mapping>
+
+	<!-- Filters -->
+	<filter>
+		<filter-name>fatalError</filter-name>
+		<filter-class>ar.edu.itba.paw.g4.web.filter.FatalErrorFilter</filter-class>
+	</filter>
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>ar.edu.itba.paw.g4.web.filter.EncodingFilter</filter-class>
+	</filter>
+	<filter>
+		<filter-name>homeRedirectFilter</filter-name>
+		<filter-class>ar.edu.itba.paw.g4.web.filter.HomeRedirectFilter</filter-class>
+	</filter>
+	<filter>
+		<filter-name>lastMovieFilter</filter-name>
+		<filter-class>ar.edu.itba.paw.g4.web.filter.LastMovieFilter</filter-class>
+	</filter>
+	<filter>
+		<filter-name>userFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<init-param>
+			<param-name>targetBeanName</param-name>
+			<param-value>userFilter</param-value>
+		</init-param>
+		<init-param>
+			<param-name>contextAttribute</param-name>
+			<param-value>org.springframework.web.servlet.FrameworkServlet.CONTEXT.spring
+			</param-value>
+		</init-param>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>homeRedirectFilter</filter-name>
+		<url-pattern>/</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<!-- <filter-mapping> -->
+	<!-- <filter-name>userFilter</filter-name> -->
+	<!-- <url-pattern>/*</url-pattern> -->
+	<!-- </filter-mapping> -->
+	<filter-mapping>
+		<filter-name>lastMovieFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 </web-app>
