--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,7 @@
 	</filter>
 
 	<!-- Mappings -->
+
 	<filter-mapping>
 		<filter-name>homeRedirectFilter</filter-name>
 		<url-pattern>/</url-pattern>
@@ -49,6 +50,10 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<!-- <filter-mapping> -->
+	<!-- <filter-name>fatalErrorFilter</filter-name> -->
+	<!-- <url-pattern>/*</url-pattern> -->
+	<!-- </filter-mapping> -->
 	<filter-mapping>
 		<filter-name>userFilter</filter-name>
 		<url-pattern>/app/*</url-pattern>
