About to introduce Hibernate Validations

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,10 +42,10 @@
 
 	<!-- Mappings -->
 
-	<filter-mapping>
-		<filter-name>homeRedirectFilter</filter-name>
-		<url-pattern>/</url-pattern>
-	</filter-mapping>
+	<!-- <filter-mapping> -->
+	<!-- <filter-name>homeRedirectFilter</filter-name> -->
+	<!-- <url-pattern>/</url-pattern> -->
+	<!-- </filter-mapping> -->
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
