--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,27 @@
 			<artifactId>joda-time-jsptags</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<!-- Validation -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.1.2.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+			<version>2.2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>javax.el</artifactId>
+			<version>2.2.4</version>
+		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.hibernate</groupId> -->
+		<!-- <artifactId>hibernate-validator-cdi</artifactId> -->
+		<!-- <version>5.1.2.Final</version> -->
+		<!-- </dependency> -->
 		<!-- DB -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -65,12 +86,12 @@
 			<version>3.3.2</version>
 		</dependency>
 		<!-- Automatic Builder generation -->
-		<!-- <dependency> -->
-		<!-- <groupId>net.karneim</groupId> -->
-		<!-- <artifactId>pojobuilder</artifactId> -->
-		<!-- <version>3.1.0</version> -->
-		<!-- <scope>provided</scope> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>net.karneim</groupId>
+			<artifactId>pojobuilder</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Testing -->
 		<dependency>
 			<groupId>junit</groupId>
