--- a/src/main/resources/setup.properties
+++ b/src/main/resources/setup.properties
@@ -2,8 +2,8 @@ hibernate.show_sql            = false
 hibernate.hbm2ddl.auto        = validate
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost/DemoHib
-jdbc.username=postgres
-jdbc.password=postgres
+jdbc.url=jdbc:postgresql://localhost:5432/paw4
+jdbc.username=paw
+jdbc.password=paw
 
 
