--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,18 @@
 			</param-value>
 		</init-param>
 	</filter>
+	<filter>
+		<filter-name>transactionFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<init-param>
+			<param-name>targetBeanName</param-name>
+			<param-value>transactionFilter</param-value>
+		</init-param>
+		<init-param>
+			<param-name>contextAttribute</param-name>
+			<param-value>org.springframework.web.servlet.FrameworkServlet.CONTEXT.spring</param-value>
+		</init-param>
+	</filter>
 
 	<!-- Mappings -->
 
@@ -55,9 +67,17 @@
 	<!-- <url-pattern>/*</url-pattern> -->
 	<!-- </filter-mapping> -->
 	<filter-mapping>
+		<filter-name>transactionFilter</filter-name>
+		<url-pattern>/app/*</url-pattern>
+	</filter-mapping>
+
+
+	<filter-mapping>
 		<filter-name>lastMovieFilter</filter-name>
 		<url-pattern>/app/*</url-pattern>
 	</filter-mapping>
+
+
 
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
