--- a/src/main/resources/setup.properties
+++ b/src/main/resources/setup.properties
@@ -1,9 +1,7 @@
 hibernate.show_sql            = false
-hibernate.hbm2ddl.auto        = validate
+hibernate.hbm2ddl.auto        = update
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/paw4
 jdbc.username=paw
 jdbc.password=paw
-
-
