--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,9 @@
 		</dependency>
 		<!-- Spring ORM -->
 		<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-orm</artifactId>
-		<version>4.1.1.RELEASE</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>4.1.1.RELEASE</version>
 		</dependency>
 		<!-- View -->
 		<dependency>
@@ -174,6 +174,12 @@
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jsp-2.1-glassfish</artifactId>
 			<version>2.1.v20100127</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.8</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
