--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time-hibernate</artifactId>
+			<version>1.3</version>
+		</dependency>
 		<!-- General utilities -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
