--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,10 +23,6 @@
 		<filter-class>ar.edu.itba.paw.g4.web.filter.HomeRedirectFilter</filter-class>
 	</filter>
 	<filter>
-		<filter-name>lastMovieFilter</filter-name>
-		<filter-class>ar.edu.itba.paw.g4.web.filter.LastMovieFilter</filter-class>
-	</filter>
-	<filter>
 		<filter-name>userFilter</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 		<init-param>
@@ -54,35 +50,25 @@
 
 	<!-- Mappings -->
 
-	<!-- <filter-mapping> -->
-	<!-- <filter-name>homeRedirectFilter</filter-name> -->
-	<!-- <url-pattern>/</url-pattern> -->
-	<!-- </filter-mapping> -->
+	<filter-mapping>
+		<filter-name>homeRedirectFilter</filter-name>
+		<url-pattern>/</url-pattern>
+	</filter-mapping>
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	<!-- <filter-mapping> -->
-	<!-- <filter-name>fatalErrorFilter</filter-name> -->
-	<!-- <url-pattern>/*</url-pattern> -->
-	<!-- </filter-mapping> -->
+	<filter-mapping>
+		<filter-name>fatalErrorFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<filter-mapping>
 		<filter-name>transactionFilter</filter-name>
 		<url-pattern>/app/*</url-pattern>
 	</filter-mapping>
-
-
-	<filter-mapping>
-		<filter-name>lastMovieFilter</filter-name>
-		<url-pattern>/app/*</url-pattern>
-	</filter-mapping>
-
-
-
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
 		<url-pattern>/app/*</url-pattern>
-		<!-- <url-pattern>/*</url-pattern> -->
 	</servlet-mapping>
 
 </web-app>
