--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,34 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	<dependencies>
+	<dependencies>	
+		<!-- Wicket related -->
+		<dependency>
+    		<groupId>org.apache.wicket</groupId>
+    		<artifactId>wicket-extensions</artifactId>
+    		<version>1.5.6</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.apache.wicket</groupId>
+    		<artifactId>wicket-datetime</artifactId>
+    		<version>1.5.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.wicket</groupId>
+			<artifactId>wicket-core</artifactId>
+			<version>1.5.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.wicket</groupId>
+			<artifactId>wicket-spring</artifactId>
+			<version>1.5.6</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>spring</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		<!-- Spring-Hibernate related -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
