--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,12 +2,43 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
+
+	<!-- Wicket -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+    
+    <filter>
+        <filter-name>wicketFilter</filter-name>
+        <filter-class>
+            org.apache.wicket.protocol.http.WicketFilter
+        </filter-class>
+        <init-param>
+            <param-name>applicationFactoryClassName</param-name>
+            <param-value>
+                org.apache.wicket.spring.SpringWebApplicationFactory
+            </param-value>
+        </init-param>
+    </filter>
+    
+     <filter-mapping>
+        <filter-name>wicketFilter</filter-name>
+        <url-pattern>/bin/*</url-pattern>
+<!--         <dispatcher>REQUEST</dispatcher> -->
+<!--         <dispatcher>ERROR</dispatcher> -->
+    </filter-mapping>
+    
+    <context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/applicationContext.xml</param-value>
+	</context-param>
+	
 	<!-- Servlets -->
 	<servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
-	</servlet>
+	</servlet>	
 
 	<!-- Filters -->
 	<filter>
