--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,43 +1,49 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	version="2.5">
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" version="2.4">
 
-	<!-- Wicket -->
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-    
-    <filter>
-        <filter-name>wicketFilter</filter-name>
-        <filter-class>
-            org.apache.wicket.protocol.http.WicketFilter
-        </filter-class>
-        <init-param>
-            <param-name>applicationFactoryClassName</param-name>
-            <param-value>
-                org.apache.wicket.spring.SpringWebApplicationFactory
-            </param-value>
-        </init-param>
-    </filter>
-    
-     <filter-mapping>
-        <filter-name>wicketFilter</filter-name>
-        <url-pattern>/bin/*</url-pattern>
-<!--         <dispatcher>REQUEST</dispatcher> -->
-<!--         <dispatcher>ERROR</dispatcher> -->
-    </filter-mapping>
-    
-    <context-param>
+	<context-param>
+		<param-name>configuration</param-name>
+		<!-- <param-value>development</param-value> -->
+		<param-value>deployment</param-value>
+	</context-param>
+
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
+	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/applicationContext.xml</param-value>
 	</context-param>
-	
-	<!-- Servlets -->
-	<servlet>
-		<servlet-name>spring</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>	
 
+	<filter>
+		<filter-name>wicketFilter</filter-name>
+		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
+		<init-param>
+			<param-name>applicationFactoryClassName</param-name>
+			<param-value>org.apache.wicket.spring.SpringWebApplicationFactory</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>wicketFilter</filter-name>
+		<url-pattern>/bin/*</url-pattern>
+	</filter-mapping>
+
+<!-- 	<servlet> -->
+<!-- 		<servlet-name>HomeRedirector</servlet-name> -->
+<!-- 		<servlet-class>ar.edu.itba.paw.web.common.HomeRedirectServlet</servlet-class> -->
+<!-- 		<init-param> -->
+<!-- 			<param-name>homeUrl</param-name> -->
+<!-- 			<param-value>bin/</param-value> -->
+<!-- 		</init-param> -->
+<!-- 	</servlet> -->
+<!-- 	<servlet-mapping> -->
+<!-- 		<servlet-name>HomeRedirector</servlet-name> -->
+<!-- 		<url-pattern>/index.html</url-pattern> -->
+<!-- 	</servlet-mapping> -->
+	
+<!-- 	<welcome-file-list> -->
+<!-- 		<welcome-file>index.html</welcome-file> -->
+<!-- 	</welcome-file-list> -->
 </web-app>
