--- a/src/main/java/ar/edu/itba/paw/web/homepage/HomePage.properties
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/HomePage.properties
@@ -1,1 +1,7 @@
-currentUser = Usuario actual
+currentUser = Actual User
+topFive = Top 5
+newAdditions = New Additions
+title = Title
+creationDate = Created At
+TotalComments = Comments
+releases = Releases
