Interesting Comments Panel and starting Movie Page

--- a/src/main/java/ar/edu/itba/paw/web/homepage/HomePage.properties
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/HomePage.properties
@@ -2,6 +2,7 @@ currentUser = Actual User
 topFive = Top 5
 newAdditions = New Additions
 title = Title
+summary = Summary
 creationDate = Created At
 TotalComments = Comments
 releases = Releases
