--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" version="2.4">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+          http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+    version="3.0">
+    <display-name>Servlet 3.0 Web Application</display-name>
 
 	<context-param>
 		<param-name>configuration</param-name>
@@ -30,20 +33,20 @@
 		<url-pattern>/bin/*</url-pattern>
 	</filter-mapping>
 
-<!-- 	<servlet> -->
-<!-- 		<servlet-name>HomeRedirector</servlet-name> -->
-<!-- 		<servlet-class>ar.edu.itba.paw.web.common.HomeRedirectServlet</servlet-class> -->
-<!-- 		<init-param> -->
-<!-- 			<param-name>homeUrl</param-name> -->
-<!-- 			<param-value>bin/</param-value> -->
-<!-- 		</init-param> -->
-<!-- 	</servlet> -->
-<!-- 	<servlet-mapping> -->
-<!-- 		<servlet-name>HomeRedirector</servlet-name> -->
-<!-- 		<url-pattern>/index.html</url-pattern> -->
-<!-- 	</servlet-mapping> -->
-	
-<!-- 	<welcome-file-list> -->
-<!-- 		<welcome-file>index.html</welcome-file> -->
-<!-- 	</welcome-file-list> -->
+	<!-- <servlet> -->
+	<!-- <servlet-name>HomeRedirector</servlet-name> -->
+	<!-- <servlet-class>ar.edu.itba.paw.web.common.HomeRedirectServlet</servlet-class> -->
+	<!-- <init-param> -->
+	<!-- <param-name>homeUrl</param-name> -->
+	<!-- <param-value>bin/</param-value> -->
+	<!-- </init-param> -->
+	<!-- </servlet> -->
+	<!-- <servlet-mapping> -->
+	<!-- <servlet-name>HomeRedirector</servlet-name> -->
+	<!-- <url-pattern>/index.html</url-pattern> -->
+	<!-- </servlet-mapping> -->
+
+	<!-- <welcome-file-list> -->
+	<!-- <welcome-file>index.html</welcome-file> -->
+	<!-- </welcome-file-list> -->
 </web-app>
