login register and logout working, register with proper validations

--- a/src/main/java/ar/edu/itba/paw/web/user/RegisterPage.properties
+++ b/src/main/java/ar/edu/itba/paw/web/user/RegisterPage.properties
@@ -1,5 +1,6 @@
 user.exists = User Already Exists
-invalidName = Invalid first or Last Name
+invalidName = Invalid First Name
+invalidLastName = Invalid Last Name
 errorEmail = Invalid Email
 errorPassword = Password: must be over 10 characters and less than 255 characters
 invalidBirthday = Invalid Birthday
@@ -10,4 +11,5 @@ enterEmail = Enter Email
 enterPassword = Enter Password
 confirmPass = Confirm Password
 enterBirthday = Enter Birthday
-confirmPassError = Invalid Confirm Password
+confirmPassError = Passwords don't match
+userExists = Sorry! The user already exists
