comments for movie, users list page, and add movie in progress

--- a/src/main/java/ar/edu/itba/paw/web/base/UserNavBar.properties
+++ b/src/main/java/ar/edu/itba/paw/web/base/UserNavBar.properties
@@ -3,5 +3,5 @@ menu = Menu
 loginRegister = Login/Register
 InsertMovie = Insert Movie
 ManageReportedComments = Manage Reported Comments
-myComments = My Comments
+myComments = My comments
 logout = Logout
