--- a/src/main/java/ar/edu/itba/paw/web/movie/MovieCommentsPanel.properties
+++ b/src/main/java/ar/edu/itba/paw/web/movie/MovieCommentsPanel.properties
@@ -1,6 +1,8 @@
-commentsAmountText = ${commentAmount} comments
+comments = comments
 user = User
 moviescore = Movie Score
 date = Date
 comment = Comment
+comments = Comments
+noComments = No Comments
 commentScore = Comment Score
