Requerimientos 2 y 3 y cosas de la migración

--- a/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.properties
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.properties
@@ -1,1 +1,3 @@
 noComments = No comments to show! Maybe you want to add more users of your interest? Go to Other Users to look around
+commentIn = commented in
+interestingUsers = Interesting Users' Comments of the Last Week
