--- a/src/main/java/ar/edu/itba/paw/web/movie/AddEditMoviePage.properties
+++ b/src/main/java/ar/edu/itba/paw/web/movie/AddEditMoviePage.properties
@@ -14,3 +14,4 @@ invalidRuntime = Runtime is Required
 invalidGenre = Genre is Required
 invalidRelease = Release Date is Required
 genresHelp = GENRES:
+deletePicText = Just delete the actual picture
