captcha in register

--- a/src/main/java/ar/edu/itba/paw/web/user/RegisterPage.properties
+++ b/src/main/java/ar/edu/itba/paw/web/user/RegisterPage.properties
@@ -13,3 +13,4 @@ confirmPass = Confirm Password
 enterBirthday = Enter Birthday
 confirmPassError = Passwords don't match
 userExists = Sorry! The user already exists
+enterCaptcha = Enter Captcha
