change in api stock and some front changes & sql

--- a/src/main/java/ar/edu/itba/paw/web/movie/AddEditMoviePage.properties
+++ b/src/main/java/ar/edu/itba/paw/web/movie/AddEditMoviePage.properties
@@ -15,3 +15,4 @@ invalidGenre = Genre is Required
 invalidRelease = Release Date is Required
 genresHelp = GENRES:
 deletePicText = Just delete the actual picture
+chooseAtLeastOne = Choose at least one
