insert and edit movie finally working with pic, date n stuff

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>wicketFilter</filter-name>
-		<url-pattern>/bin/*</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
 	<!-- <servlet> -->
