bug in following users solved, no more methods isVisible for visibility

--- a/src/main/java/ar/edu/itba/paw/web/common/UserNavBar.properties
+++ b/src/main/java/ar/edu/itba/paw/web/common/UserNavBar.properties
@@ -1,4 +1,4 @@
-loggedInAs = Logged in As
+logInAs = ${firstName} ${lastName}
 menu = Menu
 loginRegister = Login/Register
 InsertMovie = Insert Movie
