--- a/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.properties
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.properties
@@ -1,3 +1,4 @@
-noComments = No comments to show! Maybe you want to add more users of your interest? Go to Other Users to look around
+noComments = No comments to show! Maybe you want to add more users of your interest? 
+goToUsers = Search for Users
 commentIn = commented in
 interestingUsers = Interesting Users' Comments of the Last Week
