Validations and stuff tested, string with passing arguments, tests stuff

--- a/src/main/java/ar/edu/itba/paw/web/comment/MovieCommentFormPanel.properties
+++ b/src/main/java/ar/edu/itba/paw/web/comment/MovieCommentFormPanel.properties
@@ -1,4 +1,5 @@
 writeComment = Write a Comment
 score = Score
 comment = Comment
-cannotComment.text = It seems you can't comment on this movie. Maybe you already commented here or this film hasn't been released yet?
+cannotComment= It seems you can't comment on this movie. Maybe you already commented here or this film hasn't been released yet?
+commentTextInvalid = Comment Text is Required and has to be less than {0} characters
