--- a/src/main/java/ar/edu/itba/paw/web/movie/AddMoviePage.properties
+++ b/src/main/java/ar/edu/itba/paw/web/movie/AddMoviePage.properties
@@ -2,3 +2,4 @@ enterPic = Enter Picture
 invalidPicture = Invalid Picture
 enterRelease = Enter Release Date
 required = Required
+invalidRelease = Release Date is Required
