--- a/src/main/java/ar/edu/itba/paw/web/movie/MovieInputsPanel.properties
+++ b/src/main/java/ar/edu/itba/paw/web/movie/MovieInputsPanel.properties
@@ -1,17 +1,17 @@
 enterTitle = Enter Title
 required = Required
-invalidMovieName = Movie's Title is Required
-movieExists = Movie exists
 enterDirector = Enter Director
-directorError = Director is Required
 enterSummary = Enter Summary
 enterGenre = Enter Genre
 enterMin = Enter RunTime in Minutes
 enterRelease = Enter Release Date
 enterPic = Enter a picture
-invalidSummary = Summary is Required
-invalidRuntime = Runtime is Required
-invalidGenre = Genre is Required
+movieExists = Movie exists
+invalidMovieName = Title is Required and Has To Be Less Than {0} characters
+invalidDirector = Director is Required and Has To Be Less Than {0} characters
+invalidSummary = Summary is Required and Has To Be Less Than {0} characters
+invalidRuntime = Runtime is Required and Has To Be Positive
+invalidGenres = Genre is Required
 invalidRelease = Release Date is Required
 genresHelp = GENRES:
 deletePicText = Just delete the actual picture
